--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "leaflet": "^1.9.4",
     "leaflet.locatecontrol": "^0.81.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
