uploading logic and creating logic completed

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=3001
 
-CLIENT_ADDRESS=http://localhost:3000
+CLIENT_ADDRESS=https://localhost:3000
 
 MONGO_URI=mongodb://localhost/Emergency_Response_System
