--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "flowbite-react": "^0.10.0",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "leaflet.locatecontrol": "^0.81.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
